# Assignment2-GenAi

./: pyproject.toml  requirements.txt
assignment2/: compare_inference_methods.py  ex2.py  ex2_jimena.py  merge.py  test_binaryclt.py  test_simple_tree.py  testing2c.py  testing2d.py
