[tool.poetry]
name = "assignment2"
version = "0.1.0"
description = ""
authors = ["Alessandro <alessandro.preiti@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.15.3"
numpy = "^2.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
